docs(README): 更新项目文档和使用说明
- 添加动态刷新测量列表功能说明
- 新增智能解析查询结果说明
- 更新技术栈描述，增加 influxdb3-java 客户端
- 详细说明 JVM 参数配置方法
- 添加项目结构说明
- 更新 API接口示例
-增加 InfluxDB v3特性说明
- 完善常见问题和错误解决方法
- 添加更新日志